# github-username-regex-rust

./: Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
script/: update
src/: lib.rs
tests/: test_lib.rs
