[package]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "github_username_regex"
version = "0.0.1"
edition = "2021"
authors = ["Grant Birkinbine"]
license = "MIT"
description = "A lightweight Rust crate to check if a GitHub username / handle is valid"
readme = "README.md"
repository = "https://github.com/GrantBirki/github-username-regex-rust"

keywords = []
categories = []

[features]

[dependencies]
regex = "1.9.5"


[dev-dependencies]
clippy = "0.0.302"
rustfmt = "0.10.0"
