[package]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "github_username_regex"
version = "1.0.0"
edition = "2021"
authors = ["Grant Birkinbine"]
license = "MIT"
description = "A lightweight Rust crate to check if a GitHub username / handle is valid"
readme = "README.md"
repository = "https://github.com/GrantBirki/github-username-regex-rust"

keywords = ["github", "username", "regex", "validation", ]
categories = ["parsing"]

[features]

[dependencies]
regex = "1.9.5"

[dev-dependencies]
